# pkg/plugin/app.go
@@ -401,6 +401,7 @@ func (a *App) routes() []appRoute {
 		{"/services/{namespace}/{service}/graphql", a.handleGraphQLMetrics},
 		{"/services/{namespace}/{service}/runtime", a.handleRuntime},
 		{"/services/{namespace}/{service}/custom-metrics", a.handleCustomMetrics},
+		{"/services/{namespace}/{service}/database/queries", a.handleDatabaseQueries},
 		{"/services/{namespace}/{service}/scorecard", a.handleScorecard},
 		{"/services/{namespace}/{service}/alerts", a.handleServiceAlerts},
 		{"/jobs", a.handleJobs},
